fix: fix some bugs